<resources>
    <string name="app_name">Overview</string>

    <string name="vk_url">https://vk.com/onesector</string>
    <string name="telegram_url">https://t.me/onesector</string>

    <string name="status_novice">Новичок</string>
    <string name="status_enthusiast">Знаток</string>
    <string name="status_cinephile">Кинолюбитель</string>
    <string name="status_amateur_critic">Кинокритик-любитель</string>
    <string name="status_experienced_critic">Опытный кинокритик</string>
    <string name="status_expert_critic">Кинокритик-эксперт</string>
    <string name="status_master_critic">Кинокритик-мастер</string>
    <string name="status_legendary_critic">Легендарный кинокритик</string>

    <!-- Common -->
    <string name="search">Поиск</string>
    <string name="hint_email">Электронная почта</string>
    <string name="hint_password">Пароль</string>
    <string name="review_value_max_20">%1$d / 20</string>
    <string name="review_value_max_15">%1$d / 15</string>
    <string name="review_value_max_10">%1$d / 10</string>
    <string name="review_value_max_5">%1$d / 5</string>

    <!-- Bottom menu -->
    <string name="title_home">Главная</string>
    <string name="title_reviews">Обзоры</string>
    <string name="title_profile">Профиль</string>

    <!-- Onboarding -->
    <string name="onboarding_slogan">Экспертные обзоры\nкино - теперь легко!</string>
    <string name="onboarding_start">Начать</string>
    <string name="onboarding_login">Уже есть аккаунт?</string>
    <string name="onboarding_login_clickable_part">Войти</string>

    <!-- Login -->
    <string name="login_toolbar">Вход</string>
    <string name="login_title">С возвращением!</string>
    <string name="login_description">Мы рады видеть вас снова. Для продолжения,\nвведите вашу электронную почту и пароль.</string>
    <string name="login_button">Войти</string>

    <!-- Register -->
    <string name="register_toolbar">Регистрация</string>
    <string name="register_title">Создание аккаунта</string>
    <string name="register_description">Создайте аккаунт. Это займет меньше одной минуты.\nВведите электронную почту и пароль.</string>
    <string name="register_nickname">Никнейм</string>
    <string name="register_nickname_description">По никнейму люди смогут увидеть, от кого именно\nбыл написан обзор. Например, это может быть ваше\nимя и фамилия.</string>
    <string name="register_button">Создать аккаунт</string>

    <!-- About -->
    <string name="about_title">О приложении</string>
    <string name="about_vk">Страница в ВК разработчика</string>
    <string name="about_telegram">Телеграмм разработчика</string>
    <string name="about_version">Версия приложения: %1$s</string>

    <!-- Home -->
    <string name="item_feed_soon">Скоро</string>
    <string name="greetings_morning">Доброе утро,</string>
    <string name="greetings_day">Добрый день,</string>
    <string name="greetings_evening">Добрый вечер,</string>
    <string name="greetings_night">Доброй ночи,</string>
    <string name="home_rating">Рейтинг</string>
    <string name="home_rating_percent">%1$d%%</string>
    <string name="home_category_best">Лучшее</string>
    <string name="home_category_action_all">Все</string>
    <string name="home_category_popular_reviews">Популярные обзоры</string>

    <!-- Profile -->
    <string name="profile_common_category_title">Основные</string>
    <string name="profile_about">О приложении</string>
    <string name="profile_log_out">Выйти</string>

    <!-- Movie Detail -->
    <string name="movie_detail_title_description">Сюжет</string>
    <string name="movie_detail_title_actors">Актеры</string>
    <string name="movie_detail_title_reviews">Обзоры</string>
    <string name="movie_detail_movie_info">%1$s • %2$d • %3$s</string>
    <string name="movie_detail_rating">Рейтинг</string>
    <string name="movie_detail_rating_percent">%1$d%%</string>
    <string name="movie_detail_start_review">Написать обзор</string>

    <!-- Start Review -->
    <string name="start_review_short_description_title">Краткое описание</string>
    <string name="start_review_short_description_hint">Краткое описание</string>
    <string name="start_review_short_description_description">Буквально в несколько слов опишите общее впечатление о фильме, например: «Гай Ричи как всегда на высоте, а кто бы сомневался»</string>
    <string name="start_review_review_title">Рецензия</string>
    <string name="start_review_review_hint">Рецензия</string>
    <string name="start_review_review_description">Не жалейте букв, напишите максимально подробный отзыв с вашими впечатлениями о фильме, расскажите, что вам понравилось больше всего, и почему вы поставили ему именно такую оценку.</string>
    <string name="start_review_plot">Сюжет</string>
    <string name="start_review_acting_performance">Актерская игра</string>
    <string name="start_review_direction">Режиссура</string>
    <string name="start_review_artistic_design">Художественное оформление</string>
    <string name="start_review_editing">Монтаж</string>
    <string name="start_review_music_and_sound_design">Музыка и звуковое оформление</string>
    <string name="start_review_originality">Оригинальность/новаторство</string>
    <string name="start_review_emotional_impact">Эмоциональное воздействие</string>
    <string name="start_review_send">Отправить</string>

    <!-- Review -->
    <string name="review_empty_placeholder_title">Пусто :(</string>
    <string name="review_empty_placeholder_description">Вы еще не написали ни одного обзора</string>
    <string name="review_your_reviews_title">Ваши обзоры</string>
    <string name="review_rating">Рейтинг</string>
    <string name="review_rating_percent">%1$d%%</string>
</resources>