<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/purple_background"
    tools:context=".ui.onboarding.OnboardingFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="340dp"
        android:layout_height="480dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo_onboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_skip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tt_norms_pro_regular"
        android:paddingHorizontal="18dp"
        android:paddingVertical="15dp"
        android:textAlignment="center"
        android:textColor="@color/gray_97"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Пропустить" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:fontFamily="@font/tt_norms_pro_bold"
        android:text="@string/onboarding_slogan"
        android:textColor="@color/white_f2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/tt_norms_pro_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="-0.01"
        android:text="@string/onboarding_start"
        android:textAllCaps="false"
        android:textColor="@color/purple_background"
        android:textSize="16sp"
        app:backgroundTint="@color/purple_main"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_slogan" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/tt_norms_pro_regular"
        android:textAlignment="center"
        android:textColor="@color/gray_97"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start"
        tools:text="@string/onboarding_login" />

</androidx.constraintlayout.widget.ConstraintLayout>