<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/purple_background"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/tt_norms_pro_medium"
        android:textAlignment="center"
        android:textColor="@color/white_f2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        tools:text="Всеволод Сокур" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/tt_norms_pro_light"
        android:textAlignment="center"
        android:textColor="@color/gray_80"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        tools:text="Начинающий критик" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_common_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/tt_norms_pro_medium"
        android:text="@string/profile_common_category_title"
        android:textColor="@color/white_f2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_common_category">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/purple_background"
            android:orientation="vertical"
            android:showDividers="middle">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/tt_norms_pro_medium"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/profile_about"
                android:textColor="@color/gray_bd"
                android:textSize="12sp"
                app:drawableEndCompat="@drawable/ic_chevron_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="@font/tt_norms_pro_medium"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/profile_log_out"
                android:textColor="@color/red"
                android:textSize="12sp"
                app:drawableEndCompat="@drawable/ic_chevron_gray" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>